--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^5.3.7",
+    "@ant-design/pro-components": "^2.7.10",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "swr": "^2.2.5",
+    "tailwindcss": "^3.4.1",
+    "umi-request": "^1.4.0",
+    "zustand": "^4.5.2"
   }
 }
